feat: Adiciona frontend básico com index.html
Adiciona o arquivo principal `index.html` na pasta `src/main/resources/static`, permitindo que o Spring Boot o sirva automaticamente na raiz (`http://localhost:8080/`).

Este arquivo cria a interface de usuário inicial para interagir com a API de tarefas:

* Inclui um formulário (input e botão) para a criação de novas tarefas.
* Define uma lista (`<ul>`) onde as tarefas do banco de dados serão exibidas.
* Implementa JavaScript (com `fetch`) para:
    * Buscar e exibir todas as tarefas (GET /api/tasks) assim que a página carrega.
    * Enviar novas tarefas (POST /api/tasks) ao clicar no botão "Adicionar".

--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,10 @@
 /build/
 /dist/
 
+# Ficheiros de configuração do NetBeans
+/nbproject/
+
 # Configurações privadas de IDE
 /nbproject/private/
 *.user
+*.vscode
